--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ textarea {
   white-space: pre-wrap;
 }
 
-.time-block {
+.time {
   text-align: center;
   border-radius: 15px;
 }
@@ -57,7 +57,7 @@ textarea {
   color: white;
 }
 
-.saveBtn {
+.save {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -65,7 +65,7 @@ textarea {
   color: white;
 }
 
-.saveBtn i:hover {
+.save i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
